resources/base/03-spring-app/02_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spring-app
  namespace: spring-app
  labels:
    app: spring-app
    app.kubernetes.io/component: spring-app
    app.kubernetes.io/instance: spring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: spring-app
  template:
    metadata:
      labels:
        deployment: spring-app
    spec:
      volumes:
        - name: configmap
          configMap:
            name: application-properties
            defaultMode: 420
      containers:
        - name: spring-app
          image: >-
            quay.io/ilago/spring-app:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: configmap
              mountPath: /tmp/config
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
