resources/base/03-spring-app/04-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  name: spring-app
  namespace: spring-app
  labels:
    app: spring-app
    app.kubernetes.io/component: spring-app
    app.kubernetes.io/instance: spring-app
spec:
  to:
    kind: Service
    name: spring-app
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: 8080-tcp
